# mugc-sense-voice

./: .gitignore  Cargo.toml  README.md  custom-headers.json  dfx.json  package-lock.json  package.json  requirements.txt
src/mugc-sense-voice-backend/: Cargo.toml  mugc-sense-voice-backend.did
src/mugc-sense-voice-backend/models/: cnn_model.pt  cnn_model.rs
src/mugc-sense-voice-backend/src/: cnn_model.rs  lib.rs  main.py  whisper.rs
src/mugc-sense-voice-frontend/: index.html  package.json  vite.config.js
src/mugc-sense-voice-frontend/public/: .ic-assets.json5  interfaces.js  worker.js
src/mugc-sense-voice-frontend/public/utils/: logging.js
src/mugc-sense-voice-frontend/src/: App.jsx  vosk.js
src/mugc-sense-voice-frontend/src/utils/: vosk.js
