[package]
name = "mugc-sense-voice-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "0.17.1"
tch = "0.18.1"
image = "0.25.5"

candle-core = { version = "0.3", default-features = false, features = ["alloc"] }
candle-nn = { version = "0.3", default-features = false }
candle-transformers = { version = "0.3", default-features = false }
candle-wasm = { version = "0.3", default-features = false }

wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"

