[package]
name = "mugc-sense-voice-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10"
ic-cdk-macros = "0.17.1"

# for CNN model
ndarray = "0.15"
ndarray-rand = "0.15" # Random number generation for tensors
linfa = "0.4" # General machine learning framework
linfa-trees = "0.7.1" # For potential model handling
serde = { version = "1.0", features = ["derive"] } # For JSON serialization
serde_json = "1.0" # For handling JSON
rand = { version = "0.8", default-features = false, features = ["std_rng"] } # Random number generation
getrandom = { version = "0.2.11", features = ["custom"] }
rand_distr = "0.4"
num-traits = "0.2.19"

[profile.release]
panic = "abort"

